k8s/infrastructure/controllers/crowdsec/CiliumNetworkPolicy.appsec.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-crowdsec-appsec-ingress
  namespace: crowdsec
spec:
  endpointSelector: {matchLabels: {k8s-app: crowdsec, type: appsec}}
  ingress:
    - {fromEndpoints: [matchLabels: {k8s:io.kubernetes.pod.namespace: envoy-gateway-system}], toPorts: [ports: [{port: '7422', protocol: TCP}]]}  # envoy-proxy-bouncer
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-crowdsec-appsec-egress
  namespace: crowdsec
spec:
  endpointSelector: {matchLabels: {k8s-app: crowdsec, type: appsec}}
  egress:
    - {toEntities: [cluster], toPorts: [ports: [{port: '8080', protocol: TCP}]]}  # LAPI (cluster entity covers pod IPs unresolved by ipcache)
    - {toFQDNs: [{matchPattern: '*.crowdsec.net'}], toPorts: [ports: [{port: '443', protocol: TCP}]]}
