k8s/infrastructure/controllers/crowdsec/CiliumNetworkPolicy.namespace.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-intra-namespace
  namespace: crowdsec
spec:
  endpointSelector: {}
  ingress:
    - {fromEndpoints: [matchLabels: {k8s:io.kubernetes.pod.namespace: crowdsec}]}
  egress:
    - {toEndpoints: [matchLabels: {k8s:io.kubernetes.pod.namespace: crowdsec}]}
